[package]
name = "reclipsis_common"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
avian3d = { workspace = true }
lightyear = { workspace = true }
serde = { workspace = true }
leafwing-input-manager = { workspace = true }

reclipsis_assets = { path = "../reclipsis_assets" }