[package]
name = "reclipsis_server"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
avian3d = { workspace = true }
lightyear = { workspace = true }
leafwing-input-manager = { workspace = true }

reclipsis_common = { path = "../reclipsis_common" }
reclipsis_assets = { path = "../reclipsis_assets" }
